--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Dilan Doğan</h1>
     <h3>Hakkımda</h3>
-    <p>Merhaba ben Dilan Doğan! Ankara'da yaşıyorum.Bilim kurgu dizilerini büyük bir keyifle izliyorum.Ama bilim kurgunun yanında tam bir Friends hayranıyım :)<br> Kodluyoruzun 
-        bu eğitim serisi sayesinde harika şeyler öğrendim ve öğrenmeye devam ediyorum! Siz de aramıza katılın! 
+    <p>Merhaba ben Dilan Doğan! Ankara'da yaşıyorum.Bilim kurgu dizilerini büyük bir keyifle izliyorum.Ama bilim
+        kurgunun yanında tam bir Friends hayranıyım :)<br> Kodluyoruzun
+        bu eğitim serisi sayesinde harika şeyler öğrendim ve öğrenmeye devam ediyorum! Siz de aramıza katılın!
     </p>
+    <h3>İlgi Alanlarım</h3>
+    <div>1.Film</div>
+    <ul>
+        <li><a href="https://www.imdb.com/title/tt4857264/">İnvisible Guest</a></li>
+        <li>İnception</li>
+        <li>The Fault In Our Stars</li>
+    </ul>
+    <div>2.Dizi</div>
+    <ul>
+        <li>Friends</li>
+        <li><a href="https://www.imdb.com/title/tt3148266/">12 Monkeys</a></li>
+        <li>Orphan Black</li>
+    </ul>
+    <div>3.Kitap</div>
+    <ul>
+        <li>Şeker Portakalı</li>
+        <li>Serenad</li>
+        <li><a href="https://www.goodreads.com/book/show/220826.K_rk_Mantolu_Madonna">Kürk Mantolu Madonna</a></li>
+    </ul>
     <h2>Sevdiğim Diziler</h2>
     <h3>Friends</h3>
-    <p><strong><i>Friends,</i> </strong>David Crane ve Marta Kauffman tarafından yaratılmış Amerikan yapımı sitcom türünde bir dizidir. 22 Eylül 1994 ile 6 Mayıs 2004 tarihleri<br>
-         arasında NBC'de yayınlanan dizi, on sezon sürdü.Dizi Manhattan'da yaşayan bir grup arkadaşın hayatı üzerinde dönmüştür.</p>
-         <p>2014'te Mundo Estranho dergisi Friends'i "Tüm Zamanların En İyi Dizisi" seçmiştir.</p>
+    <img src="assets/images/friends.jpg" width="600" height="300" title="Friends Fotoğrafı"></img>
+    <p><strong><i>Friends,</i> </strong>David Crane ve Marta Kauffman tarafından yaratılmış Amerikan yapımı sitcom
+        türünde bir dizidir. 22 Eylül 1994 ile 6 Mayıs 2004 tarihleri
+        <br>arasında NBC'de yayınlanan dizi, on sezon sürdü.Dizi Manhattan'da yaşayan bir grup arkadaşın hayatı üzerinde
+        dönmüştür.
+    </p>
+    <p>2014'te Mundo Estranho dergisi Friends'i "Tüm Zamanların En İyi Dizisi" seçmiştir.</p>
 
 </body>
+
 </html>
